force-app/main/default/objects/OrderItem/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <label>ItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>