force-app/main/default/objects/OrderItem/fields/Location_Group__c.field-meta.xml
<CustomField>
    <fullName>Location_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Group</label>
    <referenceTo>LocationGroup</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>