force-app/main/default/objects/OrderItem/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>